--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ img {
 }
 
 .header__tagline {
-  margin: 0;
+  margin: 0 0 0 30px;
   padding-top: 0.05rem;
   font-size: 0.9375rem;
   line-height: 1.15;
